# rag

./: .pre-commit-config.yaml  README.md  api_docs.md  conversation.py  dodo.py  pyproject.toml  run_locally.py
.github/workflows/: auto-link-pr-from-title.yml  auto-pr-title.yml  mypy.yml  push-to-main.yml
src/: api_server.py  conversation.py  graph.py  state.py  user_profile.py
src/database/: utils.py
src/graphs/: base_graph.py  simple_generation_graph.py  states.py
src/streamlit_ui/: streamlit_app.py
streamlit/: streamlit_app.py
tests/functional/: test_api_server.py
tests/unit/: test_simple_generation_graph.py
