[project]
name = "rag"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <4.0.0"
dependencies = [
    "langchain>=1.2.8",
    "langgraph>=1.0.7",
    "fastapi>=0.112.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10,<2.0",
    "pytest>=8.3.0",
    "pre-commit>=3.7",
    "types-requests>=2.32.0",
    "doit>=0.36",
]

[tool.mypy]
strict = true
